This that part that creates an error

--- a/tapasV2/tapasapp/templates/tapasapp/better_list.html
+++ b/tapasV2/tapasapp/templates/tapasapp/better_list.html
@@ -18,7 +18,10 @@
                                 <td> {{ d.name }} </td>
                                 <td> {{ d.prep_time }} </td>
                                 <td> {{ d.cook_time }} </td>
-                                <td><a href="{% url 'view_detail' pk=d.pk %}"  class="btn btn-dark">Details</button></td>
+                                <td><a href="{% url 'basic_list' pk=a.pk %}"  class="btn btn-dark">Details</button></td>
+                                    <!-- im like insanely confused on why this isn't working -->
+
+                                <!-- <td><a href="{% url 'view_detail' pk=d.pk %}"  class="btn btn-dark">Details</button></td> -->
                             </tr>
                             {% endfor %}
                         </tbody>
