Problem with linking manage_account/pk

--- a/tapasV2/tapasapp/templates/tapasapp/basic_list.html
+++ b/tapasV2/tapasapp/templates/tapasapp/basic_list.html
@@ -17,7 +17,7 @@
            
             <p>
                 <a href="{% url 'manage_account' pk=a.pk %}"  class="btn btn-success">Manage</a>
-                <a href="{% url 'delete_account' pk=d.pk %}"  class="btn btn-danger">Delete</a>
+                <a href="{% url 'login' %}"  class="btn btn-danger">Logout</a>
 
             </p>
             
