--- a/tapasV2/tapasapp/templates/tapasapp/better_list.html
+++ b/tapasV2/tapasapp/templates/tapasapp/better_list.html
@@ -4,29 +4,58 @@
 
 
                 {% block content %}
-                <div class="col-12">
-                    <table class="table table-striped mb-5">
-                        <thead>
-                            <th scope="col"> Name </th>
-                            <th scope="col"> Cooking Time </th>
-                            <th scope="col"> Prep Time </th>
-                            <th scope="col">  </th>
-                        </thead>
-                        <tbody>
-                            {% for d in dishes %}
-                            <tr>
-                                <td> {{ d.name }} </td>
-                                <td> {{ d.prep_time }} </td>
-                                <td> {{ d.cook_time }} </td>
-                                <td><a href="{% url 'basic_list' pk=a.pk %}"  class="btn btn-dark">Details</button></td>
-                                    <!-- im like insanely confused on why this isn't working -->
+                <div class="container">
+                    <div class="row">
+                        <div class = "col-4">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 class="card-title"> Account Details:</h5>
+                                </div>
+                                <div class="card-body">
+                        
+                                    <h2> {{a.username}} </h2>
+                                    <p>
+                                        Password: {{a.password}}
+                                    </p>
+                                   
+                                    <p>
+                                        <a href="{% url 'manage_account' pk=a.pk}"  class="btn btn-success">Manage</a>
+                                        <a href="{% url 'login' %}"  class="btn btn-danger">Logout</a>
+    
+                                    </p>
+                                    
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <table class="table table-striped mb-5">
+                                <thead>
+                                    <th scope="col"> Name </th>
+                                    <th scope="col"> Cooking Time </th>
+                                    <th scope="col"> Prep Time </th>
+                                    <th scope="col">  </th>
+                                </thead>
+                                <tbody>
+                                    {% for d in dishes %}
+                                    <tr>
+                                        <td> {{ d.name }} </td>
+                                        <td> {{ d.prep_time }} </td>
+                                        <td> {{ d.cook_time }} </td>
+                                        <td><a href="{% url 'view_detail' pk=d.pk %}"  class="btn btn-dark">Details</button></td>
+                                            <!-- im like insanely confused on why this isn't working -->
+        
+                                        <!-- <td><a href="{% url 'view_detail' pk=d.pk %}"  class="btn btn-dark">Details</button></td> -->
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="col">
 
-                                <!-- <td><a href="{% url 'view_detail' pk=d.pk %}"  class="btn btn-dark">Details</button></td> -->
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                        </div>
+                    </div>
                 </div>
+                
                 {% endblock %}
 
             
