It works !! mwahahaha

--- a/tapasV2/tapasapp/templates/tapasapp/better_list.html
+++ b/tapasV2/tapasapp/templates/tapasapp/better_list.html
@@ -12,18 +12,22 @@
                                     <h5 class="card-title"> Account Details:</h5>
                                 </div>
                                 <div class="card-body">
-                        
-                                    <h2> {{a.username}} </h2>
+
+                                    <h2> {{a.uname}} </h2>
                                     <p>
-                                        Password: {{a.password}}
+                                        Password: {{a.pword}}
                                     </p>
                                    
+                                   
                                     <p>
-                                        <a href="{% url 'manage_account' pk=a.pk}"  class="btn btn-success">Manage</a>
+                                        {% if account %}
+                                            <a href="{% url 'manage_account' pk=account.pk %}"  class="btn btn-success">Manage</a>
+                                        {% endif %}
                                         <a href="{% url 'login' %}"  class="btn btn-danger">Logout</a>
-    
+                                        
+
                                     </p>
-                                    
+
                                 </div>
                             </div>
                         </div>
