--- a/tapasV2/tapasapp/templates/tapasapp/manage_account.html
+++ b/tapasV2/tapasapp/templates/tapasapp/manage_account.html
@@ -1,6 +1,3 @@
-<button> Change Password</button>
-<button> Back</button>
-<button> Delete Account</button>
 
 {% extends 'tapasapp/base.html' %}
 {% load static %}
@@ -14,14 +11,16 @@
         </div>
         <div class="card-body">
 
-            <h2> {{a.username}} </h2>
+            <h2> {{a.uname}} </h2>
             <p>
-                Password: {{a.password}}
+                Password: {{a.pword}}
             </p>
            
             <p>
-                <a href="{% url 'change_password' pk=a.pk %}"  class="btn btn-success">Change Password</a>
-                <a href="{% url 'basic_list' pk=a.pk %}"  class="btn btn-warning">Back</a>
+                <a href=""  class="btn btn-success">Change Password</a>
+         
+                    <a href="{% url 'better_list' %}"  class="btn btn-warning">Back</a>
+  
                 <a href="{}"  class="btn btn-danger">Delete Account</a>
 
             </p>
