Link to change password html file

--- a/tapasV2/tapasapp/templates/tapasapp/manage_account.html
+++ b/tapasV2/tapasapp/templates/tapasapp/manage_account.html
@@ -17,7 +17,7 @@
             </p>
            
             <p>
-                <a href=""  class="btn btn-success">Change Password</a>
+                <a href="{%url 'change_password' pk=account.pk %}"  class="btn btn-success">Change Password</a>
          
                     <a href="{% url 'better_list' %}"  class="btn btn-warning">Back</a>
   
