Changed colors of buttons

--- a/tapasV2/tapasapp/templates/tapasapp/manage_account.html
+++ b/tapasV2/tapasapp/templates/tapasapp/manage_account.html
@@ -17,9 +17,9 @@
             </p>
            
             <p>
-                <a href="{%url 'change_password' pk=account.pk %}"  class="btn btn-success">Change Password</a>
+                <a href="{%url 'change_password' pk=account.pk %}"  class="btn btn-warning">Change Password</a>
          
-                    <a href="{% url 'better_list' %}"  class="btn btn-warning">Back</a>
+                    <a href="{% url 'better_list' %}"  class="btn btn-success">Back</a>
   
                 <a href="{%url 'delete_account' pk=account.pk %}"  class="btn btn-danger">Delete Account</a>
 
