Can finally show username and password

--- a/tapasV2/tapasapp/templates/tapasapp/better_list.html
+++ b/tapasV2/tapasapp/templates/tapasapp/better_list.html
@@ -13,9 +13,9 @@
                                 </div>
                                 <div class="card-body">
 
-                                    <h2> {{a.uname}} </h2>
+                                    <h2> {{account.username}} </h2>
                                     <p>
-                                        Password: {{a.pword}}
+                                        Password: {{account.password}}
                                     </p>
                                    
                                    
