--- a/tapasV2/tapasapp/templates/tapasapp/manage_account.html
+++ b/tapasV2/tapasapp/templates/tapasapp/manage_account.html
@@ -11,9 +11,9 @@
         </div>
         <div class="card-body">
 
-            <h2> {{account.uname}} </h2>
+            <h2> {{account.username}} </h2>
             <p>
-                Password: {{account.pword}}
+                Password: {{account.password}}
             </p>
            
             <p>
