--- a/tapasV2/tapasapp/templates/tapasapp/add_menu.html
+++ b/tapasV2/tapasapp/templates/tapasapp/add_menu.html
@@ -34,9 +34,8 @@
                     </div>
                 </div>
 
-
-
                 <button type="submit" class="mt-3 btn btn-secondary">Add to dishes</button>
+                <a href="{% url 'better_list' %}" class="btn btn-secondary mt-3">Back</a>
             </form>                
 
 
