--- a/tapasV2/tapasapp/templates/tapasapp/update_menu.html
+++ b/tapasV2/tapasapp/templates/tapasapp/update_menu.html
@@ -34,9 +34,8 @@
                     </div>
                 </div>
 
-
-
                 <button type="submit" class="mt-3 btn btn-primary">Update dish</button>
+                <a href="{% url 'view_detail' pk=d.pk %}" class="btn btn-secondary mt-3">Back</a>
             </form>                
 
 
