--- a/tapasV2/tapasapp/templates/tapasapp/change_password.html
+++ b/tapasV2/tapasapp/templates/tapasapp/change_password.html
@@ -30,7 +30,7 @@
 
                     <div class="mb-3">
                         <label for="confirm_new_password" class="form-label">Confirm New Password</label>
-                        <input type="password" class="form-control" id="confirm_new_password" name="confirm_new_password" required>
+                        <input type="password" class="form-control" id="confirm_new_password" name="confirm_password" required>
                     </div>
 
                     <div class="d-flex gap-2">
