--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/signup.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/signup.html
@@ -70,7 +70,7 @@
 
           <hr>
           <div class="text-center">
-            <a href="{% url 'login' %}" class="btn btn-link">Already have an account? Login</a>
+            <a href="{% url 'base' %}" class="btn btn-link">Already have an account? Login</a>
           </div>
         </div>
       </div>
