--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/signup.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/signup.html
@@ -78,7 +78,7 @@
   </div>
 
   <footer class="footer fixed-bottom bg-light text-center py-2 shadow-sm">
-    <small>BASE</small>
+    <small>Sign up</small>
   </footer>
 </body>
 </html>
