--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/base.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/base.html
@@ -29,7 +29,7 @@
 
           {% if messages %}
             {% for message in messages %}
-              <div class="alert alert-danger">{{ message }}</div>
+              <div class="alert alert-success">{{ message }}</div>
             {% endfor %}
           {% endif %}
 
