--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/signup.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/signup.html
@@ -29,11 +29,13 @@
           <h3 class="text-center mb-3">Sign Up</h3>
 
           {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-danger">{{ message }}</div>
-            {% endfor %}
+          {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-3" role="alert">
+              {{ message }}
+            </div>
+          {% endfor %}
           {% endif %}
-
+        
           <form method="post">
             {% csrf_token %}
             <div class="mb-3">
@@ -59,4 +61,3 @@
   </div>
 </body>
 </html>
-
