--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/base.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/base.html
@@ -29,9 +29,11 @@
 
           {% if messages %}
           {% for message in messages %}
-            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %}">
-              {{ message }}
-            </div>
+            {% if message.tags == "error" %}
+              <div class="alert alert-danger">{{ message }}</div>
+            {% elif message.tags == "success" %}
+              <div class="alert alert-success">{{ message }}</div>
+            {% endif %}
           {% endfor %}
         {% endif %}
 
