--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/add_bottle.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/add_bottle.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'MyInventoryApp/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -10,7 +10,7 @@
                 <div class="card-body p-4">
                     <h4 class="card-title mb-4 fw-semibold">Add a New Bottle</h4>
 
-                    <form method="POST" action="{% url 'add_bottle' %}">
+                    <form method="POST" action="{% url 'add_bottle/' %}">
                         {% csrf_token %}
                         <div class="row g-3">
                             <div class="col-md-3">
