--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
@@ -16,9 +16,25 @@
           <p class="mb-1"><strong>Created at:</strong> {{ s.created_at }}</p>
         </div>
       </div>
+      
     </div>
     {% endfor %}
+<div class= "mx-auto">
+  <div class="btn-group" role="group">
+   <a href="{% url 'manage_account' pk=user.pk %}"class="btn btn-outline-primary btn-lg">Add Bottle</a>
+   <a href="{% url 'add_bottle/'%}"class="btn btn-outline-primary btn-lg">Manage Account</a>
+  <a href="{% url 'login'%}" class="btn btn-outline-primary btn-lg">Logout</a>
+    </div>
   </div>
+
+  <!-- <style>
+    .btn-group{
+      text-align: center;
+    }
+  </style> -->
+
+
+  
 </div>
 
 {% endblock %}
