manage_account error
idk why this file hates me so much

--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
@@ -21,9 +21,11 @@
     {% endfor %}
 <div class= "mx-auto">
   <div class="btn-group" role="group">
-   <a href="{% url 'manage_account' pk=user.pk %}"class="btn btn-outline-primary btn-lg">Add Bottle</a>
-   <a href="{% url 'add_bottle/'%}"class="btn btn-outline-primary btn-lg">Manage Account</a>
-  <a href="{% url 'login'%}" class="btn btn-outline-primary btn-lg">Logout</a>
+   <a href="{% url 'add_bottle/'%}"class="btn btn-outline-primary btn-lg">Add Bottle</a>
+   {% if user %}
+   <a href="{% url 'manage_account' pk=user.pk %}" class="btn btn-outline-primary btn-lg">Manage Account</a>
+   {% endif %}
+   <a href="{% url 'login'%}" class="btn btn-outline-primary btn-lg">Logout</a>
     </div>
   </div>
 
