--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/signup.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/signup.html
@@ -39,12 +39,12 @@
           <form method="post">
             {% csrf_token %}
             <div class="mb-3">
-              <label for = 'uname' class="form-label">Username</label>
-              <input type="text" class="form-control" name="uname" required>
+              <label for = 'username' class="form-label">Username</label>
+              <input type="text" class="form-control" name="username" required>
             </div>
             <div class="mb-3">
-              <label for = 'pword' class="form-label">Password</label>
-              <input type="password" class="form-control" name="pword" required>
+              <label for = 'password' class="form-label">Password</label>
+              <input type="password" class="form-control" name="password" required>
             </div>
             <div class="d-grid gap-2">
               <button type="submit" class="btn btn-success">Create Account</button>
