--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
@@ -1,24 +1,34 @@
 {% extends 'MyInventoryApp/base.html' %}
 {% load static %}
-{% block content %}
 
+{% block navbar_buttons %}
+  <li class="nav-item">
+    <a class="nav-link me-2" href="{% url 'add_bottle' %}">Add Water Bottles</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link me-2" href="{% url 'login' %}">Logout</a>
+  </li>
+{% endblock %}
+
+{% block content %}
 <div class="container my-4">
   <h3 class="mb-4 text-center">Suppliers</h3>
 
   <div class="row row-cols-1 row-cols-md-3 g-4">
     {% for s in supplier %}
     <div class="col">
-      <div class="card h-100 shadow-sm">
-        <div class="card-body">
-          <h5 class="card-title mb-2">{{ s.name }}</h5>
-          <p class="mb-1"><strong>City:</strong> {{ s.city }}</p>
-          <p class="mb-1"><strong>Country:</strong> {{ s.country }}</p>
-          <p class="mb-1"><strong>Created at:</strong> {{ s.created_at }}</p>
+      <a href="{% url 'view_bottles' %}" style="text-decoration: none; color: inherit;">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title mb-2">{{ s.name }}</h5>
+            <p class="mb-1"><strong>City:</strong> {{ s.city }}</p>
+            <p class="mb-1"><strong>Country:</strong> {{ s.country }}</p>
+            <p class="mb-1"><strong>Created at:</strong> {{ s.created_at }}</p>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
     {% endfor %}
   </div>
 </div>
-
 {% endblock %}
