--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/base.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/base.html
@@ -26,14 +26,17 @@
                    <span class="navbar-toggler-icon"></span>
              </button>
              <div class="collapse navbar-collapse" id="navbarNav">
-               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                 <li class="nav-item">
-                     <a class="nav-link me-2" href="{% url 'view_supplier' %}">Supplier</a>
-                 </li>
-                 <li class="nav-item">
-                     <a class="nav-link me-2" href="{% url 'view_bottles' %}">Water Bottles</a>
-                 </li>
-               </ul>
+              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link me-2" href="{% url 'view_supplier' %}">Supplier</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link me-2" href="{% url 'view_bottles' %}">Water Bottles</a>
+                </li>
+              
+                {% block navbar_buttons %}
+                {% endblock %}
+              </ul>
              </div>
            </div>
          </nav>
