Finish templates for change pw and manage account

--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/manage_account.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/manage_account.html
@@ -19,7 +19,7 @@
             <p>
                 <a href="{%url 'change_password' account.pk %}"  class="btn btn-warning">Change Password</a>
          
-                    <a href="{% url 'base' %}"  class="btn btn-success">Back</a>
+                    <a href="{% url 'view_supplier' %}"  class="btn btn-success">Back</a>
   
                 <a href="{%url 'delete_account' pk=account.pk %}"  class="btn btn-danger">Delete Account</a>
 
