--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
@@ -5,9 +5,11 @@
   <li class="nav-item">
     <a class="nav-link me-2" href="{% url 'add_bottle' %}">Add Water Bottles</a>
   </li>
+  {%if account%}
   <li class="nav-item">
-    <a class="nav-link me-2" href="{% url 'manage_account' pk=account.id %}">Manage Account</a>
+    <a class="nav-link me-2" href="{% url 'manage_account' pk=account.pk%}">Manage Account</a>
   </li>
+  {%endif%}
   <li class="nav-item">
     <a class="nav-link me-2" href="{% url 'login' %}">Logout</a>
   </li>
