added back button

--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_bottles.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_bottles.html
@@ -23,6 +23,9 @@
     </div>
     {% endfor %}
   </div>
+  <div class="d-flex justify-content-end mt-4 gap-2">
+    <a href="{% url 'view_supplier' %}" class="btn btn-secondary">Back</a>
+  </div>
 </div>
 
 {% endblock %}
