--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
@@ -6,7 +6,9 @@
     <a class="nav-link me-2" href="{% url 'add_bottle' %}">Add Water Bottles</a>
   </li>
   <li class="nav-item">
+    {% if account %}
     <a class="nav-link me-2" href="{% url 'manage_account' pk=account.pk %}">Manage Account</a>
+    {% endif %}
   </li>
   <li class="nav-item">
     <a class="nav-link me-2" href="{% url 'login' %}">Logout</a>
