--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_bottles.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_bottles.html
@@ -24,7 +24,7 @@
     {% endfor %}
   </div>
   <div class="d-flex justify-content-end mt-4 gap-2">
-    <a href="{% url 'view_supplier' %}" class="btn btn-secondary">Back</a>
+    <a href="{% url 'view_supplier' %}" class="btn btn-outline-secondary w-45">Back</a>
   </div>
 </div>
 
