--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
@@ -5,11 +5,16 @@
   <li class="nav-item">
     <a class="nav-link me-2" href="{% url 'add_bottle' %}">Add Water Bottles</a>
   </li>
+  {% if account and account.pk %}
   <li class="nav-item">
-    
-    <a class="nav-link me-2" href="{% url 'manage_account' pk=account.pk %}">Manage Account</a>
-    
+    <a class="nav-link me-2" href="{% url 'manage_account' account.pk %}">Manage Account</a>
   </li>
+{% else %}
+  <!-- Optional: Show a fallback or nothing -->
+  <li class="nav-item">
+    <span class="nav-link text-muted">Manage Account</span>
+  </li>
+{% endif %}
   <li class="nav-item">
     <a class="nav-link me-2" href="{% url 'login' %}">Logout</a>
   </li>
