--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/manage_account.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/manage_account.html
@@ -17,11 +17,11 @@
             </p>
            
             <p>
-                <a href="{%url 'change_password' account.pk %}"  class="btn btn-outline-warning w-45">Change Password</a>
+                <a href="{%url 'change_password' account.pk %}"  class="btn btn-outline-warning">Change Password</a>
          
-                    <a href="{% url 'view_supplier' %}"  class="btn btn-outline-success w-45">Back</a>
+                    <a href="{% url 'view_supplier' %}"  class="btn btn-outline-success">Back</a>
   
-                <a href="{%url 'delete_account' pk=account.pk %}"  class="btn btn-outline-danger w-45">Delete Account</a>
+                <a href="{%url 'delete_account' pk=account.pk %}"  class="btn btn-outline-danger">Delete Account</a>
 
             </p>
             
