--- a/tapasV2/tapasapp/templates/tapasapp/change_password.html
+++ b/tapasV2/tapasapp/templates/tapasapp/change_password.html
@@ -30,17 +30,17 @@
 
                     <div class="mb-3">
                         <label for="confirm_new_password" class="form-label">Confirm New Password</label>
-                        <input type="password" class="form-control" id="confirm_new_password" name="confirm_password" required>
+                        <input type="password" class="form-control" id="confirm_new_password" name="confirm_new_password" required>
                     </div>
 
                     <div class="d-flex gap-2">
                         <button type="submit" class="btn btn-dark w-100" style="background-color: #590404;">Confirm</button>
-                        <button type="submit" name="cancel" class="btn btn-secondary w-100">Cancel</button>
+                        <button type="button" class="btn btn-secondary w-100" onclick=window.location.href="{% url 'manage_account' account.pk %}">Cancel</button>
                     </div>
+                    
                 </form>
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
-
