--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/manage_account.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/manage_account.html
@@ -17,7 +17,7 @@
             </p>
            
             <p>
-                <a href="{%url 'change_password' account.pk %}"  class="btn btn-outline-warning">Change Password</a>
+                <a href="{%url 'change_password' pk=account.pk %}"  class="btn btn-outline-warning">Change Password</a>
          
                     <a href="{% url 'view_supplier' %}"  class="btn btn-outline-success">Back</a>
   
