--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/change_password.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/change_password.html
@@ -48,6 +48,9 @@
             </div>
             <div class="d-grid gap-2">
               <button type="submit" class="btn btn-primary">Change Password</button>
+              <a href ="{% url 'manage_account' pk=account.pk %}"class="btn btn-secondary w-100">Cancel</a>
+            
+
             </div>
           </form>
         </div>
