added / to add_bottle/ so that url can work

--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/add_bottle.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/add_bottle.html
@@ -16,7 +16,7 @@
                         {% endfor %}
                     {% endif %}
 
-                    <form method="POST" action="{% url 'add_bottle' %}">
+                    <form method="POST" action="{% url 'add_bottle/' %}">
                         {% csrf_token %}
                         <div class="row g-3">
                             <div class="col-md-3">
