added / in view_supplier

--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/view_supplier.html
@@ -3,7 +3,7 @@
 
 {% block navbar_buttons %}
   <li class="nav-item">
-    <a class="nav-link me-2" href="{% url 'add_bottle' %}">Add Water Bottles</a>
+    <a class="nav-link me-2" href="{% url 'add_bottle/' %}">Add Water Bottles</a>
   <li class="nav-item">
     <a class="nav-link me-2" href="{% url 'manage_account' pk=account.pk %}">Manage Account</a>
   </li>
