--- a/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/base.html
+++ b/Project 6/M6P-DjangoForms-LapuzSabandoValverde/MyInventoryApp/templates/MyInventoryApp/base.html
@@ -30,6 +30,12 @@
                 <li class="nav-item">
                     <a class="nav-link me-2" href="{% url 'view_supplier' %}">Supplier</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link me-2" href="{% url 'view_all_bottles' %}">Waterbottles</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link me-2" href="{% url 'add_bottle' %}">Add Water Bottles</a>
+                </li>
               
                 {% block navbar_buttons %}
                 {% endblock %}
